[package]
name = "hyperget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
url = "^2.2.2"

# hyper = {version = "0.14", features=["full"]}
hyper = {version = "*", features=["full"]}
#hyper-native-tls = {version = "*"}
hyper-tls = {version = "*"}
tokio = {version="1", features=["full"]}
futures = "0.3"
to_vec = "*"
